# Dev_CMakeWx1

./: CMakeLists.txt  CMakeSettings.json  MyCMake.cmake  MyOptions.cmake  MyPCH.cmake  MyScratch.cmake  NEW_CMakeSettings.json  PrecompiledHeader.cmake  README.md
MyLibrary1/: CMakeLists.txt  MyFunction1.cpp  MyFunction1.h  MyLibrary1Config.cmake
MyProject1/: CMakeLists.txt  MyClass1.cpp  MyClass1.h  main.cpp  stdafx.h
Project1/: CMakeLists.txt  Project1.cpp
Scratch/: CMakeLists_Project1.txt  CMakeSettings_microsoft.json  MyCMake.cmake  MyOptions.cmake  MyPCH.cmake
